Fixed more info tab spacing

--- a/src/main/webapp/bundles/health_v4/less/tabs.less
+++ b/src/main/webapp/bundles/health_v4/less/tabs.less
@@ -68,11 +68,11 @@
     color: @white;
     float: left;
     border-bottom: none;
+    border-right: none;
     outline: none;
     cursor: pointer;
     transition: 0.3s;
     font-size: 17px;
-    margin-right: 10px;
 
     @media (@sm) {
       padding: 14px 16px;
